# MinimumJerkTask

./: CMakeLists.txt  README.md
include/mc_tasks/: MinimumJerkTask.h
src/: CMakeLists.txt
src/mc_tasks/: MinimumJerkTask.cpp
tests/: CMakeLists.txt  TestJacobian.cpp
